startup-probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: startup-pod
spec:
  containers:
  - name: startup
    image: nginx
    startupProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
      failureThreshold: 12      # 최대 5 x 12 = 60초 기다려줌
    livenessProbe:
      httpGet:
        path: /
        port: 80
      periodSeconds: 10
