ingress-test.yml
# 앱 1: hello-app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: hashicorp/http-echo
        args: ["-text=hello"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 5678
---
# 앱 2: world-app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world
  template:
    metadata:
      labels:
        app: world
    spec:
      containers:
      - name: world
        image: hashicorp/http-echo
        args: ["-text=world"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: world-svc
spec:
  selector:
    app: world
  ports:
  - port: 80
    targetPort: 5678
