mysql-headless-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
spec:
  clusterIP: None # headless service
  selector:
    app: mysql
  ports:
  - port: 3306
