nginx-clusterip-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: nginx       # 이 라벨 가진 Pod들한테 트래픽 전달
  ports:
  - port: 80         # Service 포트
    targetPort: 80   # Pod 포트
