nginx-loadbalancer-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
