nginx-nodeport-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80          # Service 포트 (클러스터 내부)
    targetPort: 80    # Pod 포트
    nodePort: 30080   # 외부에서 접근할 포트 (30000~32767)
