nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-svc
            port:
              number: 80
      - path: /world
        pathType: Prefix
        backend:
          service:
            name: world-svc
            port:
              number: 80
